# ChangeLog for mail-mta/postfix
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.520 2014/08/01 05:40:05 eras Exp $

*postfix-2.12_pre20140801 (01 Aug 2014)

  01 Aug 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140801.ebuild,
  -postfix-2.12_pre20140720.ebuild:
  Version bump

*postfix-2.12_pre20140720 (22 Jul 2014)

  22 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140720.ebuild,
  -postfix-2.11.0.ebuild, -postfix-2.12_pre20140716.ebuild:
  Version bump. Remove old

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org> postfix-2.10.3.ebuild:
  Stable on alpha, bug #505014

*postfix-2.12_pre20140716 (17 Jul 2014)

  17 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140716.ebuild,
  -postfix-2.12_pre20140715.ebuild:
  Version bump

  16 Jul 2014; Eray Aslan <eras@gentoo.org> metadata.xml:
  Beautify wording

  16 Jul 2014; Eray Aslan <eras@gentoo.org> metadata.xml,
  postfix-2.12_pre20140715.ebuild:
  Add eai USE flag

*postfix-2.12_pre20140715 (16 Jul 2014)

  16 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140715.ebuild,
  -postfix-2.12_pre20140703.ebuild:
  Version bump

*postfix-2.12_pre20140703 (07 Jul 2014)

  07 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140703.ebuild,
  -postfix-2.12_pre20140701.ebuild:
  Version bump

  05 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  postfix-2.12_pre20140701.ebuild:
  Keyworded on alpha, bug #498466

  05 Jul 2014; Tobias Klausmann <klausman@gentoo.org> postfix-2.11.1.ebuild:
  Keyworded on alpha, bug #498466

*postfix-2.12_pre20140701 (02 Jul 2014)

  02 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140701.ebuild,
  -postfix-2.12_pre20140629.ebuild:
  Version bump

*postfix-2.12_pre20140629 (01 Jul 2014)

  01 Jul 2014; Eray Aslan <eras@gentoo.org> +postfix-2.12_pre20140629.ebuild,
  -postfix-2.12_pre20140618.ebuild:
  Version bump
