@@ -12,25 +12,25 @@ DIST postfix-2.12-20140801.tar.gz 4142466 SHA256 71aa1783e0f8c4fa2b3ef81d62c10d3
 DIST postfix-vda-v13-2.10.0.patch 55701 SHA256 6208021eb0b37ac6482e334e538ed5700cc22c4d4dd66ed9e975ae5f20bf935f SHA512 0b4b53a8cd28abf56eee3b2ed63ca1814251b60816e6ca1143249d25fd6ef7f905bec3134125ac6e851af685db8aae878012113693261529ae2ddbcf1bd93e62 WHIRLPOOL d98b7d2177b8b69738086880fd08c336fa60b99ff7413624e628fd5f17be2064f2ccaa37c047d3013ed41c0ff1bcb76e7962f8390c4179f28ab11733dd3b59d3
 EBUILD postfix-2.10.2.ebuild 9625 SHA256 fb54cd49a8ac2f55e17f4a996acc7cbe240d49a783d777fe5bfece4a95cf7c81 SHA512 6e7103715a5e115ba95a4b3d7a8937c120bce99a2a144f10f06167c892ea85db36a576e7344e5c45bc9a4177d811450f380a2473b79e428d43a3eb3b57c24c3a WHIRLPOOL dbab1c13c6cc69c4319adf63840225fe254d99114a625f83dcf5bf127589d35d74f41d2e10c5c2e7eda597347d239f35e21cc5a59d62644204d2a9fb6d29925d
 EBUILD postfix-2.10.3.ebuild 9633 SHA256 319e691eafe60bc00f4b778b58b6a5ae02cb879c0457a6fcffb0d0988c063c9a SHA512 4b1b844b2b5b6fc64309129758ef78d382383b382155a8cf71e3e1cd69091d88b712bdf28d6cc25de51c117f4dff87de2f1f1545b905e807248af4239a79d65a WHIRLPOOL 646877fe158d1e4ba401c3f076aeed263c641da4ee6338c02fa8508bf01f68a3a7b6156701f82f7a16dfa0c6a5a0e52571b3f065ee1a1fbcf017dffd0923bcb1
-EBUILD postfix-2.11.1.ebuild 9701 SHA256 142adea4fc665fbbe898698ed2727b0a28150d0920530a94f220ae1092f63b42 SHA512 7981600a5d5d05cd7d153d7663ef28648894c0c708b586e0f0aa032b4e94756fddb2100ad74bf3c6982c164bd019b63317146ed43c347a88617e70a7251dd31c WHIRLPOOL b0d1328fdb587844af74741a591ec84d06965c75b60cbe5e51538aa809eff07541bbc377571db07d6bda141b91d61c2ce53527ec020bc2634fea531fe15b304c
-EBUILD postfix-2.12_pre20140801.ebuild 9431 SHA256 8cf8a41df054c66bfd956ef1a5caff299228f57c4caba42304ba2b7922101701 SHA512 5996d0d7938724b8686a7a8e4e6c21987859844fb0b62f72a9921bf4af3335aa5c75a8ecd234b3add9d695aa80fc81b5fdafab3fa102647cada8eed7b21868d3 WHIRLPOOL 0e6fd4a6c7a784edf2c9cb5668ea64cab037f79a89d160eabe2845c3fec3a143dbeb56c4bbb091983d1a169e8c66aa359480d3750677c7705b387eeeaa543ff7
-MISC ChangeLog 5329 SHA256 18ea2e16434b9e8305ae29268e5fd8a248a472c791f37adcb7f2177b76be68e6 SHA512 26c93cc902e094503748bd872a0ff932f3c61010ee1e231ed76451843d61104b72205cf596b8baef7db6177959a04558282d1e5ea6b1a022f134e078d039addb WHIRLPOOL f3b139d08f083b9df57404043f2a278ccca2aa1d7849907e3a15ba1ba953c132e011c0742b82e818e3855bba02cd9f0dc0b3f73f61c1ec3c6dce69b3053909be
+EBUILD postfix-2.11.1.ebuild 9698 SHA256 72c3be21e0c0eef24fc5112170f95ec5025687d0466338ace19ee652b03ced3d SHA512 8594a7b38dede0a0b1f6f019d7f6995103c9d65592f0ffdd3e64be2b2677c9ec05f3a110492c8044b0cef1fcda87ec14ccdcb72eb03f967fabac7a80ca415da3 WHIRLPOOL b12f8b6cfa39e87257723598925eb5c9fc64a56a89c024c20fce424092c520c1e4e786ad89af152793101069881c122aa62219ec279fee2073d855fc4893d735
+EBUILD postfix-2.12_pre20140801.ebuild 9432 SHA256 09234fbea20b7cdb50edeaec9d158729a15cb5c0538f45a5f81b44796d682c4c SHA512 4dcce51b8098ad0216981580eb067199b9cba0daf0e9c556306c1895283bf481a228fb4daec81427d4c82553bd2b3904d9c6d1d24616bc311a0f3199cd4ebef1 WHIRLPOOL cbb3214b0280471f27fa9cb06a328320b77ab991a9c370616556bc3ab1c797bd163af15e36f21cec9f24370739b016fe3e3bdda8139babe4f6fd1465f693a920
+MISC ChangeLog 5592 SHA256 5bce47d3ed91e97d988b9628047fdce4e201faa407368ae2e0ce245adbcfdf0b SHA512 ecdad47fc63fbb2cba9fc7120834e77c2dbb68304bcbbd6f3ec78567956ec9626c632f1c45d840495ae60c14e4563f011022589678711a08ac77d17688bcf624 WHIRLPOOL 6357f1cefaf3a5635c5bd10a680312fff0529eca488b887d95ccfa04ece20e3a32d665a6197d4261e740a6a0c769ccee5964108bc2f5b4c70af3f8ca005e9c3b
 MISC ChangeLog-2013 100301 SHA256 439e93c3f6ea08471888157d2347da51181aa9031d4bfdeef2197a6b26680246 SHA512 c678433163e86def50d59e47d7a1a0e8f4c4af860f80932255a7c95544e1f5b55a70b68905b02a417b2332bcf3aaa59281814d8504d70085f0874a23faa2bf02 WHIRLPOOL 15a12897a576cf98d856c551157b72b47aa45fd61d05c6ed55033ce37ce247045c6bcc8143b7ccce4666900d85e0a04087c977a311e31c20f554a991bec74fbc
 MISC metadata.xml 754 SHA256 52b30e7748a792a156ad44b46878b67cb1a359c882e03f76b1d7b3b0bf111129 SHA512 bef165b527524efdcabce97c2fc0735f784dfc014ae810294e6a19b534edc6a01e14e532d730c8b8c2b76c99dafac672074317ec6dc23942285ad27895fd7220 WHIRLPOOL 702d14bd15db16217c664a39534bd1b19774d5f6c5a4a2a43e6595f400c06332c56849fd0d722c7982f5c40398b4bb0b3398b96c6f370a57d99d323d0e84ab51
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJT2yhBAAoJEHfx8XVYajsfnCIQAIudoltVyB9/wBWZVWHV29Kl
-acR+mE94Ii9sVIY0UWHLu1D4HfTckYMjTMnSAtDRuwJsdPesfy3czxElzf2SMSGB
-KqbQ+tR0K9k+nImNsiB/FqjVNhK9lVvHBL9iQ4Mn33PokcRtabI+9Ez7sx00Gj3y
-J2AwmBjt8Dpg/QOUHJ+py+eb9ATFfpLdMrCAe70KvOB2taJEpNJocq5LGHxsPutZ
-GwF0j58mjNjoqSe1mGYHDCEeI9ZJNsHMOv4Vz203gsDlXYkb6D1TMBo1E2M+Ltvl
-VBhN5IF9sPQOYwfXAPhnx26u6PxGcPhSzGb3sjTXcCv0P1oP9X4R+wsDNqRYZzQy
-R5kdg506TUkWhOkkJuUjBY1WYgBuAi9hGR89vCrcbhW9yhVzBBymeqNTciL3KNVo
-CAgPmFUdOj1qiUs+iw1Ek5bR42hzixiQmqf8clnt8W9DgYh56gd7mDpREoW9Aj7Z
-W9e0Dfdx9R0IlzzlERK/tgiTlDtfLJ6zaQWI+GtftrCbql9kNGou5n7D0sacHYYb
-GFhe6N8G/TBlrhrj36exok2guPYM8woUuQHhAn47hW++niPsi9roNd8MfSu1KGaB
-F7VxYRVGKjyAaNiyTJKY0H6MeCLSYEYbonrIyRpiB3e/JC5Q5EVuC1MeaLpA0S3S
-GwqeeaTytUbB6IfACq0F
-=uHH3
+iQIcBAEBCAAGBQJT4iFcAAoJEC7dUkA7aK9Hq+EP+QHFYJZXfrkNMKVoMVujkP8t
+1dnx2uQny+cKVgO3qB3alDAxwdUXaa+nn5nkxMYGipjyIuPJaa6Ty2MNOX96odAn
+ozJosEuVT5LCIPhTCDKE0OyCFzjBFpU/HV/kCt96SqAe31oTJ+f5NNpO2p6nIMKZ
+QTS9Au7AuYtgvcTTzy4clYG4s1kRMlUUVmU5dAWPLdVWP9DlXUWygng+/hpehw8m
+Om0SqAKgzcTKFxr6q+AO0LwEABmAxXmhfgF6scY9sRt3Kn0R99bdCl4ZdoT82xVx
+ZFd+Kxv57zzYI0LshzQnpEjD3Qfch1cu5yFaIcQj5l+FkIILARoxWyj3GpA2Iz5b
+Gbo0hGNcjlfIrt4qS+53qbYRhyEZDz2jFH89ugc43tln/8bwTgj3KipgRjFq53Is
+M7zsRYYhEgLNaaUqf7uNjxbtcQ6bfwWZKoH/Z+kb2Gl7Xg/shGyyVCHxLvWqHXJu
+4PfobTDoLtS0JjdJeL/UURlnULzZeRSUV1BIzgBCzX+0WGyFW9UcpaqJEmCU4OdH
+7s9vVwDOKmQ+9M9R7xd10+o9rT8zCEDL8IKDmOPy1yr3+xwAw6hHf8FtLXhpLvuE
+34FqSFmfGUqJi0/qbaWspKV/KX/WXp8BlbNbLpeCGUUpUrtjfsHDcMWDXYqPef06
+KjqrphwWBbeLBjJthyhz
+=wznc
 -----END PGP SIGNATURE-----
