@@ -1,13 +1,0 @@
-DEFINED_PHASES=install prepare setup test
-DEPEND=dev-scheme/guile x11-libs/gtk+:2 gnome-base/libglade:2.0 >=x11-libs/gtkglarea-1.90:2 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
-DESCRIPTION=GTK+ bindings for guile
-EAPI=2
-HOMEPAGE=http://www.gnu.org/software/guile-gtk/
-IUSE=test
-KEYWORDS=amd64 ~ppc x86
-LICENSE=GPL-3
-RDEPEND=dev-scheme/guile x11-libs/gtk+:2 gnome-base/libglade:2.0 >=x11-libs/gtkglarea-1.90:2
-SLOT=0
-SRC_URI=ftp://ftp.gnu.org/gnu/guile-gtk/guile-gtk-2.1.tar.gz
-_eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=8d92bfe0a81e165d32649e675cc94eaa
