@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/guile-gtk
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.45 2013/05/04 12:03:19 jlec Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/ChangeLog,v 1.46 2014/08/06 12:10:04 creffett Exp $
+
+  06 Aug 2014; Chris Reffett <creffett@gentoo.org> -guile-gtk-2.1.ebuild:
+  [QA] Drop old
 
 *guile-gtk-2.1-r2 (04 May 2013)
 
