@@ -1,6 +1,11 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.520 2014/08/01 05:40:05 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.521 2014/08/06 12:38:09 swift Exp $
+
+  06 Aug 2014; Sven Vermeulen <swift@gentoo.org> postfix-2.11.1.ebuild,
+  postfix-2.12_pre20140801.ebuild:
+  Add USE=selinux dependency to sec-policy/selinux-postfix also in DEPEND as
+  otherwise the file labeling operation by portage will not be done properly
 
 *postfix-2.12_pre20140801 (01 Aug 2014)
 
